[package]
name = "animal-shelter-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio-postgres = "0.7.7"
serde_json = "1.0.94"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.70"
tokio = { version = "1", features = ["full"] }